--- a/admin.html
+++ b/admin.html
@@ -15,6 +15,28 @@
     </style>
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+    (async function () {
+        const PASSWORD = atob("YWRtaW4xMjM=");
+
+        const { value: pass } = await Swal.fire({
+            title: "Admin Login",
+            input: "password",
+            inputLabel: "Masukkan password admin",
+            inputPlaceholder: "Password",
+            inputAttributes: { autocapitalize: "off" },
+            confirmButtonText: "Masuk",
+            allowOutsideClick: false,
+            allowEscapeKey: false
+        });
+
+        if (pass !== PASSWORD) {
+            await Swal.fire("Akses Ditolak", "Password salah!", "error");
+            window.location.href = "index.html";
+        }
+    })();
+    </script>
     <div class="container">
         <h1 class="mb-4"><i class="fas fa-images"></i> Admin Panel (Galeri Game)</h1>
         
